--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -23,6 +25,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.319.0",
     "next": "14.1.0",
@@ -30,12 +33,14 @@
     "prettier": "^3.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-paginate": "^8.2.0",
     "sass": "^1.70.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
