test: setup test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
     "next/core-web-vitals",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:testing-library/react",
+    "plugin:jest-dom/recommended",
     "prettier"
   ],
   "rules": {
